--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 #main{
-  background-color: #00C3C1;
+  background-color: #33726d;
   width: 80%;
   text-align: center;
   /* border-radius: 20px; */
