--- a/css/result.css
+++ b/css/result.css
@@ -1,6 +1,6 @@
 #result{
   display: none;
-  background-color: #00C3C1;
+  background-color: #33726d;
   width: 80%;
   text-align: center;
   /* border-radius: 20px; */
