--- a/css/result.css
+++ b/css/result.css
@@ -1,13 +1,24 @@
 #result{
   display: none;
   background-color: #33726d;
-  width: 80%;
+  width: 100%;
   text-align: center;
   /* border-radius: 20px; */
 }
 
 .resultname{
   font-size: 26px;
+}
+
+.allresult_button{
+  font-size: 18px ;
+  width: 100%;
+}
+
+.allresult_img {
+  width: 100%;
+  height: 65%;
+  object-fit: fill;
 }
 
 .resultDesc{
@@ -29,4 +40,9 @@
 
 .resultBox {
   text-align: center;
+}
+
+#imgs {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
